--- a/templates/admin/base.html
+++ b/templates/admin/base.html
@@ -694,7 +694,7 @@
 
     /* Filter scrollable content */
     body:not(.dashboard) #changelist-filter > div {
-      height: calc(100% - 80px) !important;
+      /* height: calc(100% - 80px) !important; */
       overflow-y: auto !important;
       scrollbar-width: thin !important;
       scrollbar-color: var(--filter-accent) transparent !important;
